<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/pc_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/desktop"
            android:text="@string/pcbuttontext"
            android:textColor="@color/red"
            android:textSize="@dimen/mainbutton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/phone_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/phone"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/phonebuttontext"
            android:textColor="@color/red"
            android:textSize="@dimen/mainbutton"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/playlist_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/skydrive_button"
            android:layout_marginRight="14dp"
            android:background="@drawable/playlist"
            android:text="@string/playlistbuttontext"
            android:textColor="@color/red"
            android:textSize="@dimen/mainbutton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/skydrive_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/googledrive"
            android:text="@string/skydrivebuttontext"
            android:textColor="@color/red"
            android:textSize="@dimen/mainbutton"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/SetAlarmButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/alarmclock"
                android:text="@string/setanalarmtext"
                android:textColor="@color/red"
                android:textSize="@dimen/mainbutton"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SettingsButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="200dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/img_btn_settings"
                android:text="@string/settingstext"
                android:textColor="@color/red"
                android:textSize="@dimen/mainbutton"
                android:textStyle="bold" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/purple"
            android:visibility="gone" />


    </RelativeLayout>

</LinearLayout>